--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>Discover hidden places in the world around you</h1>
-<a href="./index.html">Download Excursion (Comming soon!)</a>
-<p>My first paragraph.</p>
-
-</body>
+    <head>
+        <link rel="stylesheet" href="resources/css/style.css" type="text/css">
+        <title>Page Title</title>
+    </head>
+    <body>
+        <h1>Discover hidden places in the world around you</h1>
+        <a href="./index.html">Download Excursion (Comming Soon!)</a>
+        <video src = "resources/videos/excursion.mp4" autoplay></video>
+        <p>My first paragraph.</p>
+    </body>
 </html>
