--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <h1>Discover hidden places in the world around you</h1>
-        <a href="./index.html">Download Excursion (Comming Soon!)</a>
-        <video src = "resources/videos/excursion.mp4" autoplay></video>
-        <p>My first paragraph.</p>
+        <p><a class = "link_a" href="#">Download Excursion (Comming Soon!)</a></p>
+        <video autoplay loop>
+            <source src = "resources/videos/excursion.mp4" type="video/mp4">
+        </video>
     </body>
 </html>
