--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width= device-width, initial.scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <head>
         <link rel="stylesheet" href="resources/css/style.css" type="text/css">
-        <title>Page Title</title>
+        <title>Excursion</title>
     </head>
     <body>
         <h1>Discover hidden places in the world around you</h1>
@@ -10,5 +13,8 @@
         <video autoplay loop>
             <source src = "resources/videos/excursion.mp4" type="video/mp4">
         </video>
+        <h2>Your perosnal travel guide</h2>
+        <p class = "quote">Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="resources/images/camp.webp" alt="Camping tent"
     </body>
 </html>
