--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
         <title>Excursion</title>
     </head>
     <body>
-        <h1>Discover hidden places in the world around you</h1>
-        <p><a class = "link_a" href="#">Download Excursion (Comming Soon!)</a></p>
+        <header>
+            <h1>Discover hidden places in the world around you</h1>
+            <p><a class = "link_a" href="#">Download Excursion (Comming Soon!)</a></p>
+        </header>
         <video autoplay loop>
             <source src = "resources/videos/excursion.mp4" type="video/mp4">
         </video>
-        <h2>Your perosnal travel guide</h2>
+        <h2>Your personal travel guide</h2>
         <p class = "quote">Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img src="resources/images/camp.webp" alt="Camping tent"
+        <img src="resources/images/camp.webp" alt="Camping tent">
+        <footer>
+            <br><br>
+            <img src = "resources/images/phone.webp" alt="not compatible">
+            <h2>Coming Soon for iPhone and Android</h2>
+            <p><a class = "link_a" href="#">Download Excursion (Comming Soon!)</a></p>
+            <br>
+            <p class="brand">© Excursion</p>
+        </footer>
     </body>
 </html>
